app/scss/_wall.scss
.text-bottom {
  display: none;
  width: 100%;
  text-align: center;
  @include centre(y);
  color: white;
  @include alpha-background-color(rgba($color-primary-dark, 0.5), white);
  margin-bottom: 0;
  > * {
    margin: 0;
    padding: 0;
  }
}

.item:hover .text-bottom {
  display: block!important;
}

.padding {
  padding: 10px;
}

.size11 {
  line-height: 184px;
  text-align: center;
}

.size2-2 {
  line-height: 85px;
}


$tile-list: "1x2-bass1" "1x2-singer1" "1x2-singer2" "2x1-alto1" "2x1-sheetmusic" "2x1-singer1" "2x1-tromboner1" "2x1-trompeter1" "2x1-trompeter2" "2x1-trompeter3" "2x1-trompeter4" "square-alto1" "square-alto2" "square-alto3" "square-bari1" "square-bass-trombone" "square-drummer" "square-drummer2" "square-guitar1" "square-guitar2" "square-guitar3" "square-guitar4" "square-saxes1" "square-singer1" "square-singer2" "square-tenor" "square-tenor2" "square-tenor3";

@each $current-tile in $tile-list {
    .tile-#{$current-tile} {
      background:transparent url('/images/tiles/#{$current-tile}.jpg');
    }
}

[class^="tile-"] {
  background-size: cover;
  width: 100%; height: 100%;
  display: block;
}


#freewall {
  h1,h2,h3,h4,h5,p {
    color: white;
  }

  .item:hover figure {
    border:0;
  }

  .item:hover figure{
    @include filter(grayscale(100%));
    border: 4px solid $color-primary-dark;
  }
}

#freewall figure {
  margin:0;
}

